@@ -1,7 +1,7 @@
 Package: MSstatsTMT
 Title: Protein Significance Analysis in shotgun mass spectrometry-based proteomic experiments with tandem mass tag (TMT) labeling
-Version: 1.6.0
-Date: 2020-04-24
+Version: 1.6.1
+Date: 2020-05-10
 Description: Tools for protein significance analysis in shotgun mass spectrometry-based proteomic experiments with tandem mass tag (TMT) labeling.
 Authors@R: c(person("Ting", "Huang", email = "thuang0703@gmail.com", role=c("aut","cre")),
 	person("Meena", "Choi", email = "mnchoi67@gmail.com", role="aut"),
@@ -9,7 +9,7 @@ Authors@R: c(person("Ting", "Huang", email = "thuang0703@gmail.com", role=c("aut
 	person("Olga", "Vitek", email = "o.vitek@northeastern.edu", role = "aut"))
 Maintainer: Ting Huang <thuang0703@gmail.com>
 License: Artistic-2.0
-Depends: R (>= 3.6)
+Depends: R (>= 4.0)
 Imports: limma, lme4, lmerTest, dplyr, tidyr, statmod, methods,
     reshape2, data.table, matrixStats, stats, utils, ggplot2, grDevices, graphics, MSstats
 Suggests: BiocStyle, knitr, rmarkdown, testthat
